# lib_cli

./: README.md  pyproject.toml  requirements.txt
cli_tool/: __main__.py  config.py  config_loader.py  data.json  main.py  test_library.py
cli_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli_tool/log/: config.py  main.py
